Bug fixes and error handling.